Add QueryJobResult.submission
